correct box-shadow for movie card in dark mode

--- a/src/sass/base/_dark-mode-switch.scss
+++ b/src/sass/base/_dark-mode-switch.scss
@@ -16,9 +16,9 @@
 .dark-mode-box-shadow {
   background-color: $dark-mode-main-background-color;
   color: $dark-mode-main-font-bright-color;
-  -webkit-box-shadow: 8px 10px 20px 8px rgba(152, 152, 152, 0.9);
-  -moz-box-shadow: 8px 10px 20px 8px rgba(152, 152, 152, 0.9);
-  box-shadow: 8px 10px 20px 8px rgba(152, 152, 152, 0.9);
+  -webkit-box-shadow: 8px 10px 15px 6px rgba(152, 152, 152, 0.9);
+  -moz-box-shadow: 8px 10px 15px 6px rgba(152, 152, 152, 0.9);
+  box-shadow: 8px 10px 15px 6px rgba(152, 152, 152, 0.9);
 }
 
 .tui-pagination .tui-page-btn.dark-mode-pagination {
